Add BaseFactory class.

--- a/settings.ini
+++ b/settings.ini
@@ -39,8 +39,8 @@ status = 3
 user = cj-mills
 
 ### Optional ###
-requirements = fastcore python-fasthtml
+requirements = fastcore python-fasthtml typer rich
 # dev_requirements = 
-# console_scripts =
+console_scripts = tw-explorer=cjm_fasthtml_tailwind.cli.explorer:cli
 # conda_user = 
 # package_data =
