Implement initial CLI tool.

--- a/settings.ini
+++ b/settings.ini
@@ -39,8 +39,8 @@ status = 3
 user = cj-mills
 
 ### Optional ###
-requirements = fastcore python-fasthtml typer rich
+requirements = fastcore python-fasthtml
 # dev_requirements = 
-console_scripts = tw-explorer=cjm_fasthtml_tailwind.cli.explorer:cli
+console_scripts = cjm-tailwind-explore=cjm_fasthtml_tailwind.cli.explorer:main 
 # conda_user = 
 # package_data =
