--- a/settings.ini
+++ b/settings.ini
@@ -1,16 +1,10 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/AnswerDotAI/nbdev/blob/main/settings.ini for examples.
-
-### Python library ###
 repo = cjm-fasthtml-tailwind
-lib_name = %(repo)s
-version = 0.0.1
+lib_name = cjm-fasthtml-tailwind
+version = 0.0.2
 min_python = 3.11
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = cjm_fasthtml_tailwind
 nbs_path = nbs
@@ -18,29 +12,29 @@ recursive = True
 tst_flags = notest
 put_version_in_init = True
 update_pyproject = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://cj-mills.github.io
+doc_baseurl = /cjm-fasthtml-tailwind
+git_url = https://github.com/cj-mills/cjm-fasthtml-tailwind
+title = cjm-fasthtml-tailwind
 audience = Developers
 author = Christian J. Mills
 author_email = 9126128+cj-mills@users.noreply.github.com
-copyright = 2025 onwards, %(author)s
+copyright = 2025 onwards, Christian J. Mills
 description = Python-native Tailwind CSS v4 utility builder providing type-safe, dynamic class generation with full abstraction for FastHTML projects.
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = cj-mills
-
-### Optional ###
 requirements = fastcore python-fasthtml
-# dev_requirements = 
-console_scripts = cjm-tailwind-explore=cjm_fasthtml_tailwind.cli.explorer:main 
-# conda_user = 
-# package_data =
+console_scripts = cjm-tailwind-explore=cjm_fasthtml_tailwind.cli.explorer:main
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = False
+clean_ids = True
+clear_all = False
+cell_number = True
+skip_procs = 
+
