--- a/settings.ini
+++ b/settings.ini
@@ -27,7 +27,7 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = cj-mills
-requirements = fastcore python-fasthtml
+requirements = fastcore python-fasthtml execnb ipython
 console_scripts = cjm-tailwind-explore=cjm_fasthtml_tailwind.cli.explorer:main
 readme_nb = index.ipynb
 allowed_metadata_keys = 
