Update project description.

--- a/settings.ini
+++ b/settings.ini
@@ -22,7 +22,7 @@ audience = Developers
 author = Christian J. Mills
 author_email = 9126128+cj-mills@users.noreply.github.com
 copyright = 2025 onwards, Christian J. Mills
-description = Python-native Tailwind CSS v4 utility builder providing type-safe, dynamic class generation with full abstraction for FastHTML projects.
+description = Python-native Tailwind CSS v4 utility builder providing dynamic class generation with full abstraction for FastHTML projects.
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
