--- a/nbs/nbdev.yml
+++ b/nbs/nbdev.yml
@@ -4,6 +4,6 @@ project:
 website:
   title: "cjm-fasthtml-tailwind"
   site-url: "https://cj-mills.github.io/cjm-fasthtml-tailwind"
-  description: "Python-native Tailwind CSS v4 utility builder providing type-safe, dynamic class generation with full abstraction for FastHTML projects."
+  description: "Python-native Tailwind CSS v4 utility builder providing dynamic class generation with full abstraction for FastHTML projects."
   repo-branch: main
   repo-url: "https://github.com/cj-mills/cjm-fasthtml-tailwind"
